# Novavec-vector-db

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  requirements-api.txt  requirements.txt
api/: main.py  schemas.py
api/routes/: collections.py  search.py  vectors.py
benchmarks/: bench_recall.py  bench_runner.cpp  plot_pareto.py
bindings/: python_bindings.cpp
collection/: collection.cpp  collection.hpp
core/: distance.cpp  distance.hpp  types.hpp
demo/: ingest.py  rag_demo.py
indexes/: base_index.hpp  flat_index.cpp  flat_index.hpp
indexes/hnsw/: hnsw_index.cpp  hnsw_index.hpp  hnsw_node.hpp
indexes/ivf/: ivf_index.cpp  ivf_index.hpp  kmeans.cpp  kmeans.hpp
indexes/ivf_hnsw/: ivf_hnsw_index.cpp  ivf_hnsw_index.hpp
query/: query_engine.cpp  query_engine.hpp  query_planner.cpp  query_planner.hpp
storage/: metadata_store.cpp  metadata_store.hpp  mmap_store.cpp  mmap_store.hpp  segment.cpp  segment.hpp  segment_manager.cpp  segment_manager.hpp  wal.cpp  wal.hpp
